--- a/test/test.styl
+++ b/test/test.styl
@@ -16,7 +16,6 @@ disabled = #ccc
   &-disabled
     &:before
       border-color disabled
-
   &-prev
     &:before
       border-top: none
@@ -33,4 +32,9 @@ disabled = #ccc
 .highlight
   color primary
 
+.start-date
 
+  background darkslategrey !important
+
+.end-date
+  background darkcyan !important
