--- a/src/style.styl
+++ b/src/style.styl
@@ -101,8 +101,7 @@ brand-disabled = #ccc
       position: relative
       line-height 44px
       text-align: center
-
-  &-single-view
+  &-flat-view, &-single-view
     max-width 768px
     .calendar-title
       height: 44px
