--- a/test/test.styl
+++ b/test/test.styl
@@ -6,6 +6,14 @@ default = #fff
 gray = #ddd
 disabled = #ccc
 
+body
+  margin: 0
+  padding: 0
+#app
+  position: absolute
+  top:50px
+  left: 50%
+  transform translate(-50%,0)
 .calendar-action
 
   &-prev, &-next
