--- a/test/test.styl
+++ b/test/test.styl
@@ -96,8 +96,7 @@ body
     //border 1px #ccc solid
     border-radius 4px !important
     overflow: hidden
-    width: 100%
-    max-width 480px
+    width: 720px
     transform translateX(-50%)
     box-shadow rgba(128,128,128,0.09) 0px 2px 10px
     border-top 1px rgba(128,128,128,.09) solid
