--- a/src/style.styl
+++ b/src/style.styl
@@ -79,11 +79,10 @@ brand-disabled = #ccc
     &~&.disabled
       cursor pointer
     &.disabled
-      color brand-disabled
+      color lighten(brand-disabled,20%)
       cursor default
     &.in-range
-      background lighten(brand, 20%)
-      color brand-default
+      background #eee
     &.active
       position: relative
       color brand-default
