--- a/test/test.styl
+++ b/test/test.styl
@@ -59,10 +59,10 @@ body
 
 .start-date
 
-  background darkslategrey !important
+  background darken(darkslategrey,50%) !important
 
 .end-date
-  background darkcyan !important
+  background darken(darkcyan,20%) !important
 
 .popup
   display: none
