make template more clean

--- a/src/style.styl
+++ b/src/style.styl
@@ -90,6 +90,7 @@ brand-disabled = #ccc
   &-double-views
     width: 100%
     max-width none
+    font-size: 0
 
     .calendar-main
       width: 50%
@@ -107,3 +108,5 @@ brand-disabled = #ccc
       text-align: center
       line-height 44px
 
+.calendar-title
+  font-size: 14px
