--- a/test/test.styl
+++ b/test/test.styl
@@ -101,3 +101,9 @@ body
     box-shadow rgba(128,128,128,0.09) 0px 2px 10px
     border-top 1px rgba(128,128,128,.09) solid
 
+.calendar
+  box-shadow rgba(128,128,128,0.09) 0px 2px 10px
+  border-top 1px rgba(128,128,128,.09) solid
+  width 800px
+  
+  
