--- a/test/test.styl
+++ b/test/test.styl
@@ -9,12 +9,17 @@ disabled = #ccc
 body
   margin: 0
   padding: 0
+  height: 100%
+  width: 100%
+  background-color #ccc
 #app
   position: absolute
   top:50px
   left: 50%
   transform translate(-50%,0)
   width: 100%
+  #datepicker,.toolbar
+    background-color #fff
 .calendar-action
 
   &-prev, &-next
@@ -69,13 +74,10 @@ body
 
 .toolbar
   margin auto
-  width 100%
-  max-width 480px
+  width 768px
+  max-width 800px
   height: 34px
   position: relative
-  padding-left: 16px
-  padding-right: 16px
-
   .form-control
     padding-top: 0
     padding-bottom:0
@@ -104,5 +106,5 @@ body
 .calendar
   box-shadow rgba(128,128,128,0.09) 0px 2px 10px
   border-top 1px rgba(128,128,128,.09) solid
-  width 800px
+  width 100%
 
