--- a/test/test.styl
+++ b/test/test.styl
@@ -11,7 +11,7 @@ body
   padding: 0
   height: 100%
   width: 100%
-  background-color #ccc
+  background-color #fafafa
 #app
   position: absolute
   top:50px
