fix setDates bug

--- a/src/style.styl
+++ b/src/style.styl
@@ -81,7 +81,7 @@ brand-disabled = #ccc
       color brand-default
       background brand
 
-  .calendar-double-views
+  &.calendar-double-views
     width: 100%
     max-width none
     font-size: 0
