--- a/src/style.styl
+++ b/src/style.styl
@@ -94,9 +94,9 @@ brand-disabled = #ccc
       position: relative
       line-height 44px
       text-align: center
-  .calendar-flat-view, .calendar-single-view
+  &.calendar-flat-view, &.calendar-single-view
     max-width 768px
-  .calendar-flat-view, .calendar-single-view
+  &.calendar-flat-view, &.calendar-single-view
     .calendar-title
       height: 44px
       text-align: center
