--- a/test/test.styl
+++ b/test/test.styl
@@ -102,8 +102,9 @@ body
     box-shadow rgba(128, 128, 128, 0.09) 0px 2px 10px
     border-top 1px rgba(128, 128, 128, .09) solid
 
-.calendar
+#datepicker
   box-shadow rgba(128, 128, 128, 0.09) 0px 2px 10px
   border-top 1px rgba(128, 128, 128, .09) solid
-  width 100%
+  width 720px
+  margin: auto
 
