--- a/src/style.styl
+++ b/src/style.styl
@@ -8,7 +8,7 @@ brand-disabled = #ccc
   margin auto
   *
     box-sizing border-box
-  .calendar-main
+  .calendar-item
     position: relative
   .calendar-action
     width: 44px
@@ -90,7 +90,7 @@ brand-disabled = #ccc
     width: 100%
     max-width none
     font-size: 0
-    .calendar-main
+    .calendar-item
       width: 50%
       vertical-align: top
       display: inline-block
