--- a/example/style.styl
+++ b/example/style.styl
@@ -1,5 +1,3 @@
-
-
 primary = #06a2d0
 default = #fff
 gray = #ddd
@@ -10,7 +8,7 @@ body
   padding: 0
   height: 100%
   width: 100%
-  background-color #fafafa
+  background-color #222
 
 #app
   position: absolute
@@ -18,47 +16,36 @@ body
   left: 50%
   transform translate(-50%, 0)
   width: 100%
-  #datepicker, .toolbar
-    background-color #fff
 
 .calendar-action
+  position: relative
+  cursor pointer
+  padding: 0
+  font-size: 0 !important
+  &:before
+    content ''
+    display: block
+    width 32px
+    height 32px
+    border 2px primary solid
+    transform translate(-50%, -50%) rotate(45deg) scale(.5)
+    position: absolute
+    top: 50%
+    left: 50%
+  &:hover:before
+    border-color darken(primary, 30%)
+  &.disabled :before
+    border-color disabled
+  &:hover:before
+    border-color disabled
 
-  &-prev, &-next
-    position: relative
-    cursor pointer
-    padding: 0
-    &:before
-      content ''
-      display: block
-      width 32px
-      height 32px
-      border 2px primary solid
-      transform translate(-50%, -50%) rotate(45deg) scale(.5)
-      position: absolute
-      top: 50%
-      left: 50%
-    &:hover
-      &:before
-        border-color darken(primary, 30%)
-  &-disabled
-    &:before
-      border-color disabled
-    &:hover
-      &:before
-        border-color disabled
+  &.prev:before
+    border-top: none
+    border-right: none
 
-  &-prev
-    &:before
-      border-top: none
-      border-right: none
-
-  &-next
-    &:before
-      border-left none
-      border-bottom none
-
-  span
-    display: none
+  &.next:before
+    border-left none
+    border-bottom none
 
 .highlight
   color primary
@@ -70,20 +57,31 @@ body
 .end-date
   background darken(darkcyan, 20%) !important
 
-.popup
-  display: none
-
 .toolbar
   margin auto
-  width 768px
+  width 360px
   max-width 800px
-  height: 34px
+  height: 44px
   position: relative
+  display: flex
+  justify-content center
+  align-items center
+  .container {
+    width: 80%
+    border: 1px solid #ccc
+    border-radius 8px
+    display: flex
+    align-items center
+    justify-content center
+    background-color #fff
+
+  }
   .form-control
     padding-top: 0
     padding-bottom: 0
     line-height 34px
-
+    background-color transparent
+    border: none
   .input-group-addon
     z-index: 9
     width auto
@@ -92,20 +90,11 @@ body
     font-size: 12px
     height: 32px
 
-  .popup
-    position: absolute
-    left: 50%
-    top: 36px
-    border-radius 4px !important
-    overflow: hidden
-    width: 800px
-    transform translateX(-50%)
-    box-shadow rgba(128, 128, 128, 0.09) 0px 2px 10px
-    border-top 1px rgba(128, 128, 128, .09) solid
-
 #datepicker
   box-shadow rgba(128, 128, 128, 0.09) 0px 2px 10px
   border-top 1px rgba(128, 128, 128, .09) solid
-  width 720px
+  width 640px
+  min-height 480px
   margin: auto
-
+  border-radius 8px
+  background-color #fff
