--- a/example/style.styl
+++ b/example/style.styl
@@ -34,7 +34,7 @@ body
     left: 50%
   &:hover:before
     border-color darken(primary, 30%)
-  &.disabled :before
+  &.disabled:before
     border-color disabled
   &:hover:before
     border-color disabled
@@ -59,15 +59,14 @@ body
 
 .toolbar
   margin auto
-  width 360px
-  max-width 800px
+  width 720px
   height: 44px
   position: relative
   display: flex
   justify-content center
   align-items center
   .container {
-    width: 80%
+    width: 100%
     border: 1px solid #ccc
     border-radius 8px
     display: flex
@@ -82,6 +81,8 @@ body
     line-height 34px
     background-color transparent
     border: none
+    flex:1
+    text-align: center
   .input-group-addon
     z-index: 9
     width auto
@@ -93,7 +94,7 @@ body
 #datepicker
   box-shadow rgba(128, 128, 128, 0.09) 0px 2px 10px
   border-top 1px rgba(128, 128, 128, .09) solid
-  width 640px
+  width 720px
   min-height 480px
   margin: auto
   border-radius 8px
