--- a/example/style.css
+++ b/example/style.css
@@ -18,41 +18,14 @@ body {
   padding: 0;
   font-size: 0 !important;
 }
-.calendar-action:before {
-  content: '';
-  display: block;
-  width: 32px;
-  height: 32px;
-  border: 2px #06a2d0 solid;
-  transform: translate(-50%, -50%) rotate(45deg) scale(0.5);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-.calendar-action:hover:before {
-  border-color: #047192;
-}
-.calendar-action.disabled:before {
-  border-color: #ccc;
-}
-.calendar-action:hover:before {
-  border-color: #ccc;
-}
-.calendar-action.prev:before {
-  border-top: none;
-  border-right: none;
-}
-.calendar-action.next:before {
-  border-left: none;
-  border-bottom: none;
-}
+
 .highlight {
   color: #06a2d0;
 }
-.start-date {
+.calendar-cell.start-date .date {
   background: #182828 !important;
 }
-.end-date {
+.calendar-cell.end-date .date {
   background: #006f6f !important;
 }
 .toolbar {
@@ -91,10 +64,8 @@ body {
   height: 32px;
 }
 #datepicker {
-  box-shadow: rgba(128,128,128,0.09) 0px 2px 10px;
-  border-top: 1px rgba(128,128,128,0.09) solid;
-  width: 720px;
-  min-height: 480px;
+  box-shadow: rgba(128, 128, 128, 0.09) 0px 2px 10px;
+  border-top: 1px rgba(128, 128, 128, 0.09) solid;
   margin: auto;
   border-radius: 8px;
   background-color: #fff;
