--- a/example/style.css
+++ b/example/style.css
@@ -3,14 +3,16 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background-color: #222;
+}
+
+* {
+  box-sizing: border-box;
 }
 #app {
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translate(-50%, 0);
   width: 100%;
+  border: 1px solid #ccc;
+  width: 482px;
+  margin: 32px;
 }
 .calendar-action {
   position: relative;
@@ -28,45 +30,15 @@ body {
 .calendar-cell.end-date .date {
   background: #006f6f !important;
 }
-.toolbar {
-  margin: auto;
-  width: 720px;
-  height: 44px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.toolbar .container {
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-}
-.toolbar .form-control {
-  padding-top: 0;
-  padding-bottom: 0;
-  line-height: 34px;
-  background-color: transparent;
-  border: none;
-  flex: 1;
-  text-align: center;
-}
-.toolbar .input-group-addon {
-  z-index: 9;
-  width: auto;
-  line-height: 32px;
-  padding: 0 6px;
-  font-size: 12px;
-  height: 32px;
-}
+
 #datepicker {
-  box-shadow: rgba(128, 128, 128, 0.09) 0px 2px 10px;
-  border-top: 1px rgba(128, 128, 128, 0.09) solid;
-  margin: auto;
-  border-radius: 8px;
   background-color: #fff;
+}
+
+#date-value {
+  font-size: 14px;
+  width: 100%;
+  border-top: 1px #ccc solid;
+  padding: 12px;
+  display: block;
 }
